--- a/control_raspberry_adapter/Cargo.toml
+++ b/control_raspberry_adapter/Cargo.toml
@@ -2,6 +2,7 @@
 name = "control_raspberry_adapter"
 version = "0.1.0"
 edition = "2021"
+authors = ["neidr4"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
