--- a/teleop_keyboard/Cargo.toml
+++ b/teleop_keyboard/Cargo.toml
@@ -1,9 +1,8 @@
 [package]
-name = "teleoperation_minimal_test"
+name = "teleop_keyboard"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-teleoperation_basic = {path = "../../teleoperation_basic/"}
