--- a/tests/teleop_keyboard_test/Cargo.toml
+++ b/tests/teleop_keyboard_test/Cargo.toml
@@ -1,8 +1,10 @@
 [package]
-name = "teleoperation_basic"
+name = "teleop_keyboard_test"
 version = "0.1.0"
 edition = "2021"
+authors = ["Neidr4"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+teleop_keyboard = {path = "../../teleop_keyboard/"}
