--- a/teleop_keyboard/Cargo.toml
+++ b/teleop_keyboard/Cargo.toml
@@ -6,3 +6,4 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+inputbot = { git = "https://github.com/obv-mikhail/InputBot", branch = "develop" }
