--- a/teleop_keyboard/Cargo.toml
+++ b/teleop_keyboard/Cargo.toml
@@ -7,3 +7,4 @@ edition = "2021"
 
 [dependencies]
 inputbot = { git = "https://github.com/obv-mikhail/InputBot", branch = "develop" }
+once_cell = "1.18.0"
