--- a/teleop_keyboard/Cargo.toml
+++ b/teleop_keyboard/Cargo.toml
@@ -2,9 +2,11 @@
 name = "teleop_keyboard"
 version = "0.1.0"
 edition = "2021"
+authors = ["neidr4"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-inputbot = { git = "https://github.com/obv-mikhail/InputBot", branch = "develop" }
+# inputbot = { git = "https://github.com/obv-mikhail/InputBot", branch = "develop" }
+inputbot = "0.6"
 once_cell = "1.18.0"
