--- a/control_minimal/Cargo.toml
+++ b/control_minimal/Cargo.toml
@@ -1,7 +1,8 @@
 [package]
 name = "control_minimal"
 authors = ["neidr4"]
-version = "0.0.1"
+version = "0.1.0"
+edition = "2021"
 
 [dependencies]
 once_cell = "1.18.0"
