--- a/oneiros/Cargo.toml
+++ b/oneiros/Cargo.toml
@@ -12,3 +12,4 @@ control_raspberry_adapter = {path = "../control_raspberry_adapter/"}
 control_minimal = {path = "../control_minimal/"}
 control_rate_limiter = {path = "../control_rate_limiter/"}
 teleop_keyboard = {path = "../teleop_keyboard/"}
+teleop_gamepad = {path = "../teleop_gamepad/"}
